--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">20</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Selenium.java.LoginPageTest</td><td><a href="#m0">testUntitled</a></td><td rowspan="1">1429129016546</td><td rowspan="1">7</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">Selenium.java.LoginPageTest#testUntitled</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Error: Unresolved compilation problems: 
-	driver cannot be resolved
-	baseUrl cannot be resolved to a variable
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">47 738</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Selenium.java.LoginPageTest</td><td><a href="#m0">testUntitled</a></td><td rowspan="1">1429163577983</td><td rowspan="1">47722</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">Selenium.java.LoginPageTest#testUntitled</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: Failed to connect to binary FirefoxBinary(C:\Program Files (x86)\Mozilla Firefox\firefox.exe) on port 7055; process output follows: 
+9163579949	DeferredSave.extensions.json	DEBUG	Starting write
+1429163579956	addons.manager	DEBUG	shutdown
+1429163579956	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
+1429163579956	addons.xpi	DEBUG	shutdown
+1429163579957	addons.xpi-utils	DEBUG	shutdown
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
+1429163579958	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
+1429163580163	DeferredSave.extensions.json	DEBUG	Write succeeded
+1429163580163	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 16
+1429163580164	addons.xpi	DEBUG	Notifying XPI shutdown observers
+1429163580168	addons.manager	DEBUG	Async provider shutdown done
+1429163580581	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/addons/XPIProvider.jsm: [&quot;XPIProvider&quot;]
+1429163580582	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/LightweightThemeManager.jsm: [&quot;LightweightThemeManager&quot;]
+1429163580583	addons.xpi	DEBUG	startup
+1429163580584	addons.xpi	INFO	Mapping fxdriver@googlecode.com to C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\fxdriver@googlecode.com
+1429163580584	addons.xpi	DEBUG	Ignoring file entry whose name is not a valid add-on ID: C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\webdriver-staging
+1429163580584	addons.xpi	INFO	Mapping {972ce4c6-7e08-4474-a285-3208198ce6fd} to C:\Program Files (x86)\Mozilla Firefox\browser\extensions\{972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580584	addons.xpi	DEBUG	Skipping unavailable install location app-system-share
+1429163580585	addons.xpi	DEBUG	Skipping unavailable install location app-system-local
+1429163580585	addons.xpi	DEBUG	checkForChanges
+1429163580585	addons.xpi	DEBUG	Loaded add-on state from prefs: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580585	addons.xpi	DEBUG	getModTime: Recursive scan of fxdriver@googlecode.com
+1429163580589	addons.xpi	DEBUG	getModTime: Recursive scan of {972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580589	addons.xpi	DEBUG	getInstallState changed: false, state: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580590	addons.xpi	DEBUG	No changes found
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
+JavaScript error: file:///C:/Users/ILYA/AppData/Local/Temp/anonymous523582415360323992webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js, line 11464: TypeError: this.server_ is undefined
+JavaScript error: chrome://fxdriver/content/server.js, line 38: NS_ERROR_XPC_CI_RETURNED_FAILURE: Component returned failure code: 0x80570015 (NS_ERROR_XPC_CI_RETURNED_FAILURE) [nsIJSCID.createInstance]
+*** Blocklist::_preloadBlocklistFile: blocklist is disabled
+1429163581280	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
 
+Build info: version: &apos;2.43.1&apos;, revision: &apos;5163bceef1bc36d43f3dc0b83c88998168a363a0&apos;, time: &apos;2014-09-10 09:43:55&apos;
+System info: host: &apos;Lumen&apos;, ip: &apos;192.168.1.3&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.8.0_31&apos;
+Driver info: driver.version: FirefoxDriver
+	at org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:130)
+	at org.openqa.selenium.firefox.FirefoxDriver.startClient(FirefoxDriver.java:246)
+	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:114)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:191)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:186)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:182)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:95)
 	at Selenium.java.LoginPageTest.testUntitled(LoginPageTest.java:19)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
@@ -33,4 +70,42 @@
 	at org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:111)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:204)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:175)
+Caused by: org.openqa.selenium.firefox.NotConnectedException: Unable to connect to host 127.0.0.1 on port 7055 after 45000 ms. Firefox console output:
+9163579949	DeferredSave.extensions.json	DEBUG	Starting write
+1429163579956	addons.manager	DEBUG	shutdown
+1429163579956	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
+1429163579956	addons.xpi	DEBUG	shutdown
+1429163579957	addons.xpi-utils	DEBUG	shutdown
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
+1429163579958	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
+1429163580163	DeferredSave.extensions.json	DEBUG	Write succeeded
+1429163580163	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 16
+1429163580164	addons.xpi	DEBUG	Notifying XPI shutdown observers
+1429163580168	addons.manager	DEBUG	Async provider shutdown done
+1429163580581	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/addons/XPIProvider.jsm: [&quot;XPIProvider&quot;]
+1429163580582	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/LightweightThemeManager.jsm: [&quot;LightweightThemeManager&quot;]
+1429163580583	addons.xpi	DEBUG	startup
+1429163580584	addons.xpi	INFO	Mapping fxdriver@googlecode.com to C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\fxdriver@googlecode.com
+1429163580584	addons.xpi	DEBUG	Ignoring file entry whose name is not a valid add-on ID: C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\webdriver-staging
+1429163580584	addons.xpi	INFO	Mapping {972ce4c6-7e08-4474-a285-3208198ce6fd} to C:\Program Files (x86)\Mozilla Firefox\browser\extensions\{972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580584	addons.xpi	DEBUG	Skipping unavailable install location app-system-share
+1429163580585	addons.xpi	DEBUG	Skipping unavailable install location app-system-local
+1429163580585	addons.xpi	DEBUG	checkForChanges
+1429163580585	addons.xpi	DEBUG	Loaded add-on state from prefs: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580585	addons.xpi	DEBUG	getModTime: Recursive scan of fxdriver@googlecode.com
+1429163580589	addons.xpi	DEBUG	getModTime: Recursive scan of {972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580589	addons.xpi	DEBUG	getInstallState changed: false, state: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580590	addons.xpi	DEBUG	No changes found
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
+JavaScript error: file:///C:/Users/ILYA/AppData/Local/Temp/anonymous523582415360323992webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js, line 11464: TypeError: this.server_ is undefined
+JavaScript error: chrome://fxdriver/content/server.js, line 38: NS_ERROR_XPC_CI_RETURNED_FAILURE: Component returned failure code: 0x80570015 (NS_ERROR_XPC_CI_RETURNED_FAILURE) [nsIJSCID.createInstance]
+*** Blocklist::_preloadBlocklistFile: blocklist is disabled
+1429163581280	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
+
+	at org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:118)
+	... 31 more
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
