--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\ILYA\AppData\Local\Temp\testng-eclipse--1031402898\testng-customsuite.xml</span>
+                    <span>C:\Users\ILYA\AppData\Local\Temp\testng-eclipse--653074891\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -127,15 +127,52 @@
                   <a name="testUntitled">
                   </a> <!-- testUntitled -->
                   <span class="method-name">testUntitled</span>
-                  <div class="stack-trace">java.lang.Error: Unresolved compilation problems: 
-	driver cannot be resolved
-	baseUrl cannot be resolved to a variable
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
-	driver cannot be resolved
+                  <div class="stack-trace">org.openqa.selenium.WebDriverException: Failed to connect to binary FirefoxBinary(C:\Program Files (x86)\Mozilla Firefox\firefox.exe) on port 7055; process output follows: 
+9163579949	DeferredSave.extensions.json	DEBUG	Starting write
+1429163579956	addons.manager	DEBUG	shutdown
+1429163579956	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
+1429163579956	addons.xpi	DEBUG	shutdown
+1429163579957	addons.xpi-utils	DEBUG	shutdown
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
+1429163579958	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
+1429163580163	DeferredSave.extensions.json	DEBUG	Write succeeded
+1429163580163	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 16
+1429163580164	addons.xpi	DEBUG	Notifying XPI shutdown observers
+1429163580168	addons.manager	DEBUG	Async provider shutdown done
+1429163580581	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/addons/XPIProvider.jsm: [&quot;XPIProvider&quot;]
+1429163580582	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/LightweightThemeManager.jsm: [&quot;LightweightThemeManager&quot;]
+1429163580583	addons.xpi	DEBUG	startup
+1429163580584	addons.xpi	INFO	Mapping fxdriver@googlecode.com to C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\fxdriver@googlecode.com
+1429163580584	addons.xpi	DEBUG	Ignoring file entry whose name is not a valid add-on ID: C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\webdriver-staging
+1429163580584	addons.xpi	INFO	Mapping {972ce4c6-7e08-4474-a285-3208198ce6fd} to C:\Program Files (x86)\Mozilla Firefox\browser\extensions\{972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580584	addons.xpi	DEBUG	Skipping unavailable install location app-system-share
+1429163580585	addons.xpi	DEBUG	Skipping unavailable install location app-system-local
+1429163580585	addons.xpi	DEBUG	checkForChanges
+1429163580585	addons.xpi	DEBUG	Loaded add-on state from prefs: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580585	addons.xpi	DEBUG	getModTime: Recursive scan of fxdriver@googlecode.com
+1429163580589	addons.xpi	DEBUG	getModTime: Recursive scan of {972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580589	addons.xpi	DEBUG	getInstallState changed: false, state: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580590	addons.xpi	DEBUG	No changes found
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
+JavaScript error: file:///C:/Users/ILYA/AppData/Local/Temp/anonymous523582415360323992webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js, line 11464: TypeError: this.server_ is undefined
+JavaScript error: chrome://fxdriver/content/server.js, line 38: NS_ERROR_XPC_CI_RETURNED_FAILURE: Component returned failure code: 0x80570015 (NS_ERROR_XPC_CI_RETURNED_FAILURE) [nsIJSCID.createInstance]
+*** Blocklist::_preloadBlocklistFile: blocklist is disabled
+1429163581280	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
 
+Build info: version: &apos;2.43.1&apos;, revision: &apos;5163bceef1bc36d43f3dc0b83c88998168a363a0&apos;, time: &apos;2014-09-10 09:43:55&apos;
+System info: host: &apos;Lumen&apos;, ip: &apos;192.168.1.3&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.8.0_31&apos;
+Driver info: driver.version: FirefoxDriver
+	at org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:130)
+	at org.openqa.selenium.firefox.FirefoxDriver.startClient(FirefoxDriver.java:246)
+	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:114)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:191)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:186)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:182)
+	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:95)
 	at Selenium.java.LoginPageTest.testUntitled(LoginPageTest.java:19)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
@@ -161,6 +198,44 @@
 	at org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:111)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:204)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:175)
+Caused by: org.openqa.selenium.firefox.NotConnectedException: Unable to connect to host 127.0.0.1 on port 7055 after 45000 ms. Firefox console output:
+9163579949	DeferredSave.extensions.json	DEBUG	Starting write
+1429163579956	addons.manager	DEBUG	shutdown
+1429163579956	addons.manager	DEBUG	Calling shutdown blocker for XPIProvider
+1429163579956	addons.xpi	DEBUG	shutdown
+1429163579957	addons.xpi-utils	DEBUG	shutdown
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for LightweightThemeManager
+1429163579957	addons.manager	DEBUG	Calling shutdown blocker for GMPProvider
+1429163579958	addons.manager	DEBUG	Calling shutdown blocker for PluginProvider
+1429163580163	DeferredSave.extensions.json	DEBUG	Write succeeded
+1429163580163	addons.xpi-utils	DEBUG	XPI Database saved, setting schema version preference to 16
+1429163580164	addons.xpi	DEBUG	Notifying XPI shutdown observers
+1429163580168	addons.manager	DEBUG	Async provider shutdown done
+1429163580581	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/addons/XPIProvider.jsm: [&quot;XPIProvider&quot;]
+1429163580582	addons.manager	DEBUG	Loaded provider scope for resource://gre/modules/LightweightThemeManager.jsm: [&quot;LightweightThemeManager&quot;]
+1429163580583	addons.xpi	DEBUG	startup
+1429163580584	addons.xpi	INFO	Mapping fxdriver@googlecode.com to C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\fxdriver@googlecode.com
+1429163580584	addons.xpi	DEBUG	Ignoring file entry whose name is not a valid add-on ID: C:\Users\ILYA\AppData\Local\Temp\anonymous523582415360323992webdriver-profile\extensions\webdriver-staging
+1429163580584	addons.xpi	INFO	Mapping {972ce4c6-7e08-4474-a285-3208198ce6fd} to C:\Program Files (x86)\Mozilla Firefox\browser\extensions\{972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580584	addons.xpi	DEBUG	Skipping unavailable install location app-system-share
+1429163580585	addons.xpi	DEBUG	Skipping unavailable install location app-system-local
+1429163580585	addons.xpi	DEBUG	checkForChanges
+1429163580585	addons.xpi	DEBUG	Loaded add-on state from prefs: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580585	addons.xpi	DEBUG	getModTime: Recursive scan of fxdriver@googlecode.com
+1429163580589	addons.xpi	DEBUG	getModTime: Recursive scan of {972ce4c6-7e08-4474-a285-3208198ce6fd}
+1429163580589	addons.xpi	DEBUG	getInstallState changed: false, state: {&quot;app-profile&quot;:{&quot;fxdriver@googlecode.com&quot;:{&quot;d&quot;:&quot;C:\\Users\\ILYA\\AppData\\Local\\Temp\\anonymous523582415360323992webdriver-profile\\extensions\\fxdriver@googlecode.com&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;2.43.1&quot;,&quot;st&quot;:1429163579048,&quot;mt&quot;:1429163578933}},&quot;app-global&quot;:{&quot;{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;:{&quot;d&quot;:&quot;C:\\Program Files (x86)\\Mozilla Firefox\\browser\\extensions\\{972ce4c6-7e08-4474-a285-3208198ce6fd}&quot;,&quot;e&quot;:true,&quot;v&quot;:&quot;37.0.1&quot;,&quot;st&quot;:1429037746560,&quot;mt&quot;:1428033983000}}}
+1429163580590	addons.xpi	DEBUG	No changes found
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for XPIProvider
+1429163580592	addons.manager	DEBUG	Registering shutdown blocker for LightweightThemeManager
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for GMPProvider
+1429163580593	addons.manager	DEBUG	Registering shutdown blocker for PluginProvider
+JavaScript error: file:///C:/Users/ILYA/AppData/Local/Temp/anonymous523582415360323992webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js, line 11464: TypeError: this.server_ is undefined
+JavaScript error: chrome://fxdriver/content/server.js, line 38: NS_ERROR_XPC_CI_RETURNED_FAILURE: Component returned failure code: 0x80570015 (NS_ERROR_XPC_CI_RETURNED_FAILURE) [nsIJSCID.createInstance]
+*** Blocklist::_preloadBlocklistFile: blocklist is disabled
+1429163581280	addons.manager	DEBUG	Registering shutdown blocker for &lt;unnamed-provider&gt;
+
+	at org.openqa.selenium.firefox.internal.NewProfileExtensionConnection.start(NewProfileExtensionConnection.java:118)
+	... 31 more
 
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -170,7 +245,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ILYA\AppData\Local\Temp\testng-eclipse--1031402898\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ILYA\AppData\Local\Temp\testng-eclipse--653074891\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -223,12 +298,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testUntitled')
 data.setCell(0, 2, 'Selenium.java.LoginPageTest')
-data.setCell(0, 3, 7);
+data.setCell(0, 3, 47722);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 ms</span>
+              <span class="suite-total-time">Total running time: 47 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
